refactored streaming code more